--- a/plugin.xml
+++ b/plugin.xml
@@ -1,49 +1,47 @@
-<Plugin
+﻿<Plugin
     DescriptorVersion="1.0"
-    Name="HelloWorld"
-    PluginId="C28ABD6B-9615-4512-B8DA-A04096F35628"
-    Author="Albert"
+    Name="Webradio"
+    PluginId="{9CBA9944-C19B-4112-B082-70C745677A97}"
+    Author="BigGranu"
     Copyright="GPL"
-    Description="Sample plugin"
-    PluginVersion="0.1">
+    Description="Play Webradiostreams"
+    PluginVersion="1.0">
 
   <Runtime>
-    <Assembly FileName="HelloWorld.dll"/>
+    <Assembly FileName="Webradio.dll"/>
   </Runtime>
 
   <Register Location="/Models">
-    <Model Id="5726DA5A-70D5-458f-AF67-611293D97912" ClassName="HelloWorld.Models.HelloWorldModel"/>
+    <Model Id="EA3CC191-0BE5-4C8D-889F-E9C4616AB554" ClassName="Webradio.Models.WebradioHome"/>
+	<Model Id="6378BD83-BF06-4AC3-ADD7-9A4B72DA878E" ClassName="Webradio.Models.WebradioSettings"/>
+	<Model Id="FF29E03E-F4A9-4E21-A299-349E79010430" ClassName="Webradio.Models.WebradioFilter"/>
+	<Model Id="EC2F9DD4-C694-4C2D-9EFB-092AA1F4BD94" ClassName="Webradio.Models.WebradioFavorites"/>
   </Register>
 
   <Register Location="/Workflow/States">
-    <!-- This is the workflow state which corresponds to the hello world screen. Each workflow state corresponds to
-         a certain UI state. The id is needed to be able to reference the state, for example in the action which
-         navigates to this state, see in file hello-world-actions.xml.
-
-         The Id uniquely identifies the state among all workflow states. Use a GUID generator to create
-         a new state id. The id is referenced from workflow actions which lead to this state as well as from
-         code which tells the WorkflowManager to push a workflow state onto the workflow navigation stack.
-
-         The name of the state is only needed for debug reasons and will not be shown to the user.
-
-         The MainScreen will automatically be shown by the workflow manager when switching to the state.
-         It is also possible to set the screen programmatically when using a workflow model.
-
-         The DisplayLabel is the string which is shown in the Navigation bar for this state. -->
-    <WorkflowState Id="D5CD9D35-1B36-4ede-8BED-A4FB658F27BD"
-        Name="HelloWorldMain" MainScreen="hello_world"
-        DisplayLabel="[HelloWorld.StateDisplayLabel]"/> <!-- No workflow model -->
-		
-	<WorkflowState Id="508639CD-BB0A-40BD-8210-73BA2A818411"
-        Name="HelloWorl2" MainScreen="hello_world2"
-        DisplayLabel="[HelloWorld.StateDisplayLabel]"/> <!-- No workflow model -->
+    <WorkflowState Id="263FADFE-87BE-4563-83F0-E62707891E1B"
+        Name="WebradioHome" MainScreen="webradio_Home"
+        DisplayLabel="Home"
+		WorkflowModel="EA3CC191-0BE5-4C8D-889F-E9C4616AB554"/>		
+	<WorkflowState Id="5F49F6FC-32C4-48F6-85C8-2EF05598310A"
+        Name="WebradioSettings" MainScreen="webradio_Settings"
+        DisplayLabel="Settings"
+		WorkflowModel="6378BD83-BF06-4AC3-ADD7-9A4B72DA878E"/>		
+	<WorkflowState Id="F35CFCFE-7E2F-4F1C-BF99-AFAC0181134E"
+        Name="WebradioFilter" MainScreen="webradio_Filter"
+        DisplayLabel="Filter"
+		WorkflowModel="FF29E03E-F4A9-4E21-A299-349E79010430"/>		
+	<WorkflowState Id="3E56BA52-F982-40C3-ACD9-E88425DC7C43"
+        Name="WebradioFavorites" MainScreen="webradio_Favorites"
+        DisplayLabel="Favorites"
+		WorkflowModel="EC2F9DD4-C694-4C2D-9EFB-092AA1F4BD94"/>
   </Register>
 
   <Register Location="/Resources/Skin">
-    <Resource Id="HelloWorldSkin" Directory="Skin" Type="Skin"/>
+    <Resource Id="WebradioSkin" Directory="Skin" Type="Skin"/>
   </Register>
-
+  
   <Register Location="/Resources/Language">
-    <Resource Id="HelloWorldLanguage" Directory="Language" Type="Language"/>
+    <Resource Id="WebradioLanguge" Directory="Language" Type="Language"/>
   </Register>
 </Plugin>
