--- a/Webradio.csproj
+++ b/Webradio.csproj
@@ -64,6 +64,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\WebradioDlgDeleteFilter.cs" />
     <Compile Include="Models\WebradioData.cs" />
     <Compile Include="Models\WebradioDlgImportFilter.cs" />
     <Compile Include="Models\WebradioDlgSearchInStreams.cs" />
@@ -84,11 +85,30 @@
     <Content Include="Data\WebradioSender.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Language\strings_en.xml" />
-    <Content Include="plugin.xml" />
-    <Content Include="Skin\default\images\2DED75C0-5EAE-4E69-9913-6B50A9AB2956.jpg" />
-    <Content Include="Skin\default\images\DefaultLogo.png" />
-    <Content Include="Skin\default\workflow\webradio-actions.xml" />
+    <Content Include="Language\strings_en.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="plugin.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Skin\default\images\2DED75C0-5EAE-4E69-9913-6B50A9AB2956.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Skin\default\images\DefaultLogo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Skin\default\images\Saved.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Skin\default\images\Unsaved.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Skin\default\workflow\webradio-actions.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Skin\default\screens\webradio_dialogImportFilter.xaml" />
     <Content Include="Skin\default\screens\webradio_Favorites.xaml">
       <SubType>Designer</SubType>
@@ -96,7 +116,9 @@
     <Content Include="Skin\default\screens\webradio_Filter.xaml" />
     <Content Include="Skin\default\screens\webradio_Home.xaml" />
     <Content Include="Skin\default\screens\webradio_Settings.xaml" />
-    <Content Include="Skin\default\themes\default\styles\WebradioStyles.xaml" />
+    <Content Include="Skin\default\themes\default\styles\WebradioStyles.xaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Todo.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -127,6 +149,11 @@
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Skin\default\screens\webradio_dialogDeleteFilter.xaml">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="build.targets" />
   <PropertyGroup>
@@ -134,8 +161,8 @@
 robocopy "$(ProjectDir)Language" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\Language" /MIR
 mkdir "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\Skin"
 robocopy "$(ProjectDir)Skin" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\Skin" /MIR 
-mkdir "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\Data"
-robocopy "$(ProjectDir)Data" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\Data" /MIR 
+mkdir "C:\ProgramData\Team MediaPortal\MP2-Client\Webradio"
+robocopy "$(ProjectDir)Data" "C:\ProgramData\Team MediaPortal\MP2-Client\Webradio" /MIR 
 xcopy /Y "$(ProjectDir)plugin.xml" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\"
 xcopy /Y "$(TargetPath)" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\"
 </PostBuildEvent>
