--- a/plugin.xml
+++ b/plugin.xml
@@ -1,86 +1,96 @@
 ﻿<Plugin
-	DescriptorVersion="1.0"
-	Name="Webradio"
-	PluginId="{9CBA9944-C19B-4112-B082-70C745677A97}"
-	Author="BigGranu"
-	Copyright="GPL"
-	Description="Play Webradiostreams"
-	PluginVersion="1.0">
+  DescriptorVersion="1.0"
+  Name="Webradio"
+  PluginId="{9CBA9944-C19B-4112-B082-70C745677A97}"
+  Author="BigGranu"
+  Copyright="GPL"
+  Description="Play Webradiostreams"
+  PluginVersion="1.0">
 
   <Runtime>
     <Assembly FileName="Webradio.dll"/>
   </Runtime>
 
-  <Register Location="/Models">
-		<Model Id="EA3CC191-0BE5-4C8D-889F-E9C4616AB554" ClassName="Webradio.Models.WebradioHome"/>
-		<Model Id="6378BD83-BF06-4AC3-ADD7-9A4B72DA878E" ClassName="Webradio.Models.WebradioSettings"/>
-		<Model Id="FF29E03E-F4A9-4E21-A299-349E79010430" ClassName="Webradio.Models.WebradioFilter"/>
-		<Model Id="EC2F9DD4-C694-4C2D-9EFB-092AA1F4BD94" ClassName="Webradio.Models.WebradioFavorites"/>
-		<Model Id="63F1DA3E-E87F-4478-83E7-C13966447869" ClassName="Webradio.Models.WebradioDlgShowFilter"/>
-		<Model Id="9723DCC8-969D-470E-B156-F4E6E639DD18" ClassName="Webradio.Models.WebradioDlgShowFavorites"/>
-    <Model Id="59AB04C6-6B8D-41E5-A041-7AFC8DEDEB89" ClassName="Webradio.Models.WebradioDlgDeleteFilter"/>
-		<Model Id="7AE86A07-DB55-4AA6-9FBF-B1888A4FF6DA" ClassName="Webradio.Models.WebradioDlgSearchInStreams"/>	
-		<Model Id="10D0E2AB-AE84-406F-8AA9-5A3FB2A86360" ClassName="Webradio.Models.WebradioDlgImportFilter"/>
-		
-		<Model Id="BD1BA004-1BC0-49F5-9107-AD8FFD07BAAE" ClassName="Webradio.Models.WebradioData"/>	
-	</Register>
+  <DependsOn>
+    <PluginReference PluginId="{5D239050-02B8-4f58-8301-7630A1C4CF85}"/> <!-- SkinBase -->
+    <PluginReference PluginId="{15FB35F7-8C85-4404-BC67-BFF28446158A}"/> <!-- Media -->
+    <PluginReference PluginId="{9886EB43-B3EB-4cf1-A979-8D4D8874C555}"/> <!-- BassPlayer -->
+  </DependsOn>
 
-	<Register Location="/ResourceProviders">
+  <Register Location="/Models">
+    <Model Id="EA3CC191-0BE5-4C8D-889F-E9C4616AB554" ClassName="Webradio.Models.WebradioHome"/>
+    <Model Id="6378BD83-BF06-4AC3-ADD7-9A4B72DA878E" ClassName="Webradio.Models.WebradioSettings"/>
+    <Model Id="FF29E03E-F4A9-4E21-A299-349E79010430" ClassName="Webradio.Models.WebradioFilter"/>
+    <Model Id="EC2F9DD4-C694-4C2D-9EFB-092AA1F4BD94" ClassName="Webradio.Models.WebradioFavorites"/>
+    <Model Id="63F1DA3E-E87F-4478-83E7-C13966447869" ClassName="Webradio.Models.WebradioDlgShowFilter"/>
+    <Model Id="9723DCC8-969D-470E-B156-F4E6E639DD18" ClassName="Webradio.Models.WebradioDlgShowFavorites"/>
+    <Model Id="59AB04C6-6B8D-41E5-A041-7AFC8DEDEB89" ClassName="Webradio.Models.WebradioDlgDeleteFilter"/>
+    <Model Id="7AE86A07-DB55-4AA6-9FBF-B1888A4FF6DA" ClassName="Webradio.Models.WebradioDlgSearchInStreams"/>
+    <Model Id="10D0E2AB-AE84-406F-8AA9-5A3FB2A86360" ClassName="Webradio.Models.WebradioDlgImportFilter"/>
+
+    <Model Id="BD1BA004-1BC0-49F5-9107-AD8FFD07BAAE" ClassName="Webradio.Models.WebradioData"/>
+  </Register>
+
+  <Register Location="/ResourceProviders">
     <Instance Id="96364E39-DFD9-462F-B117-EF0D2E87ACE8" ClassName="Webradio.Player.RawUrlMediaProvider"/>
   </Register>
-	
+
+  <Register Location="/Players/Builders">
+    <PlayerBuilder Id="78C3403B-CABC-4E21-8D80-2370A31B0A04" ClassName="Webradio.Player.WebRadioPlayerBuilder"/>
+  </Register>
+
   <Register Location="/Workflow/States">
     <WorkflowState Id="263FADFE-87BE-4563-83F0-E62707891E1B"
       Name="WebradioHome" MainScreen="webradio_Home"
       DisplayLabel="[Webradio.Home.ScreenTitle]"
-			WorkflowModel="EA3CC191-0BE5-4C8D-889F-E9C4616AB554"/>		
-		<WorkflowState Id="5F49F6FC-32C4-48F6-85C8-2EF05598310A"
+      WorkflowModel="EA3CC191-0BE5-4C8D-889F-E9C4616AB554"/>
+    <WorkflowState Id="5F49F6FC-32C4-48F6-85C8-2EF05598310A"
       Name="WebradioSettings" MainScreen="webradio_Settings"
       DisplayLabel="[Webradio.Settings.ScreenTitle]"
-			WorkflowModel="6378BD83-BF06-4AC3-ADD7-9A4B72DA878E"/>		
-		<WorkflowState Id="F35CFCFE-7E2F-4F1C-BF99-AFAC0181134E"
+      WorkflowModel="6378BD83-BF06-4AC3-ADD7-9A4B72DA878E"/>
+    <WorkflowState Id="F35CFCFE-7E2F-4F1C-BF99-AFAC0181134E"
       Name="WebradioFilter" MainScreen="webradio_Filter"
       DisplayLabel="[Webradio.Filter.ScreenTitle]"
-			WorkflowModel="FF29E03E-F4A9-4E21-A299-349E79010430"/>		
-		<WorkflowState Id="3E56BA52-F982-40C3-ACD9-E88425DC7C43"
+      WorkflowModel="FF29E03E-F4A9-4E21-A299-349E79010430"/>
+    <WorkflowState Id="3E56BA52-F982-40C3-ACD9-E88425DC7C43"
       Name="WebradioFavorites" MainScreen="webradio_Favorites"
       DisplayLabel="[Webradio.Favorites.ScreenTitle]"
-			WorkflowModel="EC2F9DD4-C694-4C2D-9EFB-092AA1F4BD94"/>	
-			
-		<DialogState Id="EB57D60B-0490-46C9-B6D8-0170DA37A926" 
-			Name="ImportFilter" 
-			DialogScreen="webradio_dialogImportFilter"
-			DisplayLabel="[Webradio.Dialog.ImportFilter.Header]" 
-			WorkflowModel="10D0E2AB-AE84-406F-8AA9-5A3FB2A86360"/>	
-			
-		<DialogState Id="76A060DF-0379-431D-A497-AB49B7C37F4E" 
-			Name="ShowFilter" 
-			DialogScreen="webradio_dialogShowFilter" 
-			DisplayLabel="[Webradio.Dialog.ShowFilter.Header]" 
-			WorkflowModel="63F1DA3E-E87F-4478-83E7-C13966447869"/>
-			
-		<DialogState Id="4942D325-08BB-4237-8825-F616AD2ADBF7" 
-			Name="Search" 
-			DialogScreen="Webradio_dialogSearchInStreams" 
-			DisplayLabel="[Webradio.Dialog.Search.Header]" 
-			WorkflowModel="7AE86A07-DB55-4AA6-9FBF-B1888A4FF6DA"/>
-			
-		<DialogState Id="56694DC2-041E-4D93-AD52-747D3394EB52" 
-			Name="Webradio.Dialog.ShowFavorites.Header" 
-			DialogScreen="webradio_dialogShowFavorites" 
-			DisplayLabel="[Webradio.Dialog.ShowFavorites.Header]" 
-			WorkflowModel="9723DCC8-969D-470E-B156-F4E6E639DD18"/>
-			
-		<DialogState Id="AAA7C211-93D4-40A8-96B3-2CCE6C7CB0A8" 
-			Name="Webradio.Dialog.DeleteFilter.Header" 
-			DialogScreen="webradio_dialogDeleteFilter" 
-			DisplayLabel="[Webradio.Dialog.DeleteFilter.Header]" 
-			WorkflowModel="59AB04C6-6B8D-41E5-A041-7AFC8DEDEB89"/>			
-			
+      WorkflowModel="EC2F9DD4-C694-4C2D-9EFB-092AA1F4BD94"/>
+
+    <DialogState Id="EB57D60B-0490-46C9-B6D8-0170DA37A926"
+      Name="ImportFilter"
+      DialogScreen="webradio_dialogImportFilter"
+      DisplayLabel="[Webradio.Dialog.ImportFilter.Header]"
+      WorkflowModel="10D0E2AB-AE84-406F-8AA9-5A3FB2A86360"/>
+
+    <DialogState Id="76A060DF-0379-431D-A497-AB49B7C37F4E"
+      Name="ShowFilter"
+      DialogScreen="webradio_dialogShowFilter"
+      DisplayLabel="[Webradio.Dialog.ShowFilter.Header]"
+      WorkflowModel="63F1DA3E-E87F-4478-83E7-C13966447869"/>
+
+    <DialogState Id="4942D325-08BB-4237-8825-F616AD2ADBF7"
+      Name="Search"
+      DialogScreen="Webradio_dialogSearchInStreams"
+      DisplayLabel="[Webradio.Dialog.Search.Header]"
+      WorkflowModel="7AE86A07-DB55-4AA6-9FBF-B1888A4FF6DA"/>
+
+    <DialogState Id="56694DC2-041E-4D93-AD52-747D3394EB52"
+      Name="Webradio.Dialog.ShowFavorites.Header"
+      DialogScreen="webradio_dialogShowFavorites"
+      DisplayLabel="[Webradio.Dialog.ShowFavorites.Header]"
+      WorkflowModel="9723DCC8-969D-470E-B156-F4E6E639DD18"/>
+
+    <DialogState Id="AAA7C211-93D4-40A8-96B3-2CCE6C7CB0A8"
+      Name="Webradio.Dialog.DeleteFilter.Header"
+      DialogScreen="webradio_dialogDeleteFilter"
+      DisplayLabel="[Webradio.Dialog.DeleteFilter.Header]"
+      WorkflowModel="59AB04C6-6B8D-41E5-A041-7AFC8DEDEB89"/>
+
   </Register>
 
   <Register Location="/Resources/Skin">
-		<Resource Id="WebradioSkin" Directory="Skin" Type="Skin"/>
+    <Resource Id="WebradioSkin" Directory="Skin" Type="Skin"/>
   </Register>
   <Register Location="/Resources/Language">
     <Resource Id="WebradioLanguge" Directory="Language" Type="Language"/>
