updated gitignore: removed build\ directory, added *.exe

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 #################
+## Binaries
+#################
+*.exe
+
+
+#################
 ## Eclipse
 #################
 
@@ -46,7 +52,6 @@ local.properties
 [Dd]ebug/
 [Rr]elease/
 x64/
-build/
 [Bb]in/
 [Oo]bj/
 
@@ -193,7 +198,6 @@ $RECYCLE.BIN/
 *.egg
 *.egg-info
 dist/
-build/
 eggs/
 parts/
 var/
