New Order and use ISettingsManager

--- a/Webradio.csproj
+++ b/Webradio.csproj
@@ -65,12 +65,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\WebradioDlgDeleteFilter.cs" />
-    <Compile Include="Models\WebradioData.cs" />
-    <Compile Include="Models\WebradioDlgImportFilter.cs" />
-    <Compile Include="Models\WebradioDlgSearchInStreams.cs" />
-    <Compile Include="Models\WebradioDlgShowFavorites.cs" />
-    <Compile Include="Models\WebradioDlgShowFilter.cs" />
+    <Compile Include="Helper Classes\FavoriteSetupInfo.cs" />
+    <Compile Include="Helper Classes\FilterSetupInfo.cs" />
+    <Compile Include="Helper Classes\MyStream.cs" />
+    <Compile Include="Dialogues\WebradioDlgDeleteFilter.cs" />
+    <Compile Include="Dialogues\WebradioDlgImportFilter.cs" />
+    <Compile Include="Dialogues\WebradioDlgSearchInStreams.cs" />
+    <Compile Include="Dialogues\WebradioDlgShowFavorites.cs" />
+    <Compile Include="Dialogues\WebradioDlgShowFilter.cs" />
     <Compile Include="Models\WebradioFavorites.cs" />
     <Compile Include="Models\WebradioFilter.cs" />
     <Compile Include="Models\WebradioHome.cs" />
@@ -80,10 +82,10 @@
     <Compile Include="Player\WebRadioPlayerHelper.cs" />
     <Compile Include="Player\WebRadioUIContributor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\FavoritesSettings.cs" />
+    <Compile Include="Settings\FilterSettings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Data\WebradioFavorites.xml" />
-    <Content Include="Data\WebradioFilters.xml" />
     <Content Include="Data\WebradioSender.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -124,19 +126,19 @@
     <Content Include="Todo.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MediaPortal-2-FEAT_BassStreamInfos\MediaPortal-2-FEAT_BassStreamInfos\MediaPortal\Source\Core\MediaPortal.Common\MediaPortal.Common.csproj">
+    <ProjectReference Include="..\MediaPortal-2-FEAT_BassStreamInfos\MediaPortal\Source\Core\MediaPortal.Common\MediaPortal.Common.csproj">
       <Project>{ECF060E7-CAA1-4466-851F-F80B857641EA}</Project>
       <Name>MediaPortal.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MediaPortal-2-FEAT_BassStreamInfos\MediaPortal-2-FEAT_BassStreamInfos\MediaPortal\Source\Core\MediaPortal.UI\MediaPortal.UI.csproj">
+    <ProjectReference Include="..\MediaPortal-2-FEAT_BassStreamInfos\MediaPortal\Source\Core\MediaPortal.UI\MediaPortal.UI.csproj">
       <Project>{52E587D0-A274-44DA-8846-8EEAF5414923}</Project>
       <Name>MediaPortal.UI</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MediaPortal-2-FEAT_BassStreamInfos\MediaPortal-2-FEAT_BassStreamInfos\MediaPortal\Source\UI\Players\BassPlayer\BassPlayer.csproj">
+    <ProjectReference Include="..\MediaPortal-2-FEAT_BassStreamInfos\MediaPortal\Source\UI\Players\BassPlayer\BassPlayer.csproj">
       <Project>{1A980621-B711-4235-B98C-C4276D6FA9FD}</Project>
       <Name>BassPlayer</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MediaPortal-2-FEAT_BassStreamInfos\MediaPortal-2-FEAT_BassStreamInfos\MediaPortal\Source\UI\UiComponents\Media\Media.csproj">
+    <ProjectReference Include="..\MediaPortal-2-FEAT_BassStreamInfos\MediaPortal\Source\UI\UiComponents\Media\Media.csproj">
       <Project>{CD37E2FF-4CF7-4F96-8C73-C6764988D408}</Project>
       <Name>Media</Name>
     </ProjectReference>
