--- a/plugin.xml
+++ b/plugin.xml
@@ -22,12 +22,12 @@
     <Model Id="6378BD83-BF06-4AC3-ADD7-9A4B72DA878E" ClassName="Webradio.Models.WebradioSettings"/>
     <Model Id="FF29E03E-F4A9-4E21-A299-349E79010430" ClassName="Webradio.Models.WebradioFilter"/>
     <Model Id="EC2F9DD4-C694-4C2D-9EFB-092AA1F4BD94" ClassName="Webradio.Models.WebradioFavorites"/>
-    <Model Id="63F1DA3E-E87F-4478-83E7-C13966447869" ClassName="Webradio.Models.WebradioDlgShowFilter"/>
-    <Model Id="9723DCC8-969D-470E-B156-F4E6E639DD18" ClassName="Webradio.Models.WebradioDlgShowFavorites"/>
-    <Model Id="59AB04C6-6B8D-41E5-A041-7AFC8DEDEB89" ClassName="Webradio.Models.WebradioDlgDeleteFilter"/>
-    <Model Id="7AE86A07-DB55-4AA6-9FBF-B1888A4FF6DA" ClassName="Webradio.Models.WebradioDlgSearchInStreams"/>
-    <Model Id="10D0E2AB-AE84-406F-8AA9-5A3FB2A86360" ClassName="Webradio.Models.WebradioDlgImportFilter"/>
-    <Model Id="BD1BA004-1BC0-49F5-9107-AD8FFD07BAAE" ClassName="Webradio.Models.WebradioData"/>
+    
+    <Model Id="63F1DA3E-E87F-4478-83E7-C13966447869" ClassName="Webradio.Dialogues.WebradioDlgShowFilter"/>
+    <Model Id="9723DCC8-969D-470E-B156-F4E6E639DD18" ClassName="Webradio.Dialogues.WebradioDlgShowFavorites"/>
+    <Model Id="59AB04C6-6B8D-41E5-A041-7AFC8DEDEB89" ClassName="Webradio.Dialogues.WebradioDlgDeleteFilter"/>
+    <Model Id="7AE86A07-DB55-4AA6-9FBF-B1888A4FF6DA" ClassName="Webradio.Dialogues.WebradioDlgSearchInStreams"/>
+    <Model Id="10D0E2AB-AE84-406F-8AA9-5A3FB2A86360" ClassName="Webradio.Dialogues.WebradioDlgImportFilter"/>
   </Register>
 
   <Register Location="/ResourceProviders">
