--- a/Webradio.csproj
+++ b/Webradio.csproj
@@ -89,10 +89,14 @@
     <Content Include="Data\WebradioSender.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Language\strings_de.xml" />
     <Content Include="Language\strings_en.xml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Language\strings_lt.xml" />
+    <Content Include="Language\strings_nl.xml" />
+    <Content Include="Language\strings_sv.xml" />
     <Content Include="plugin.xml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
