--- a/Webradio.csproj
+++ b/Webradio.csproj
@@ -49,9 +49,14 @@
     <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bass.Net, Version=2.4.10.1, Culture=neutral, PublicKeyToken=b7566c273e6ef480, processorArchitecture=MSIL" />
+    <Reference Include="Bass.Net, Version=2.4.10.3, Culture=neutral, PublicKeyToken=b7566c273e6ef480, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\Team MediaPortal\MP2-Client\Plugins\BassLibraries\Bass.Net.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
@@ -83,10 +88,9 @@
     <Compile Include="Settings\FilterSettings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Data\WebradioSender.xml">
+    <Content Include="Data\StreamList.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Data\StreamList.xml" />
     <Content Include="Language\strings_de.xml" />
     <Content Include="Language\strings_en.xml">
       <SubType>Designer</SubType>
@@ -136,6 +140,7 @@
     <ProjectReference Include="C:\Users\dierk_000\Downloads\MediaPortal-2-WiP_Alpha3\MediaPortal\Source\UI\Players\BassPlayer\BassPlayer.csproj">
       <Project>{1A980621-B711-4235-B98C-C4276D6FA9FD}</Project>
       <Name>BassPlayer</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="C:\Users\dierk_000\Downloads\MediaPortal-2-WiP_Alpha3\MediaPortal\Source\UI\UiComponents\Media\Media.csproj">
       <Project>{CD37E2FF-4CF7-4F96-8C73-C6764988D408}</Project>
