--- a/Webradio.csproj
+++ b/Webradio.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\FavoritesSettings.cs" />
     <Compile Include="Settings\FilterSettings.cs" />
+    <Compile Include="Settings\WebradioConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\StreamList.xml">
