--- a/Webradio.csproj
+++ b/Webradio.csproj
@@ -49,18 +49,24 @@
     <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bass.Net, Version=2.4.10.3, Culture=neutral, PublicKeyToken=b7566c273e6ef480, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\Team MediaPortal\MP2-Client\Plugins\BassLibraries\Bass.Net.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Bass.Net">
+      <HintPath>..\MediaPortal-2-EXP_20131117\MediaPortal-2-EXP_20131117\MediaPortal\Packages\BASS.NET.2.4.10.3\lib\net40\Bass.Net.dll</HintPath>
+    </Reference>
+    <Reference Include="BassPlayer">
+      <HintPath>..\MediaPortal-2-EXP_20131117\MediaPortal-2-EXP_20131117\MediaPortal\Bin\MP2-Client\bin\x86\Debug\Plugins\BassPlayer\BassPlayer.dll</HintPath>
+    </Reference>
+    <Reference Include="Media">
+      <HintPath>..\MediaPortal-2-EXP_20131117\MediaPortal-2-EXP_20131117\MediaPortal\Bin\MP2-Client\bin\x86\Debug\Plugins\Media\Media.dll</HintPath>
     </Reference>
     <Reference Include="MediaPortal.Common, Version=2.0.0.1309, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files (x86)\Team MediaPortal\MP2-Client\MediaPortal.Common.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="MediaPortal.UI, Version=2.0.0.1309, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files (x86)\Team MediaPortal\MP2-Client\MediaPortal.UI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -71,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dialogues\WebradioDlgLoadUpdate.cs" />
+    <Compile Include="Dialogues\WebradioDlgSettingsStreamlistUpdate.cs" />
     <Compile Include="Helper Classes\FavoriteSetupInfo.cs" />
     <Compile Include="Helper Classes\FilterSetupInfo.cs" />
     <Compile Include="Helper Classes\StreamListeners.cs" />
@@ -86,7 +93,7 @@
     <Compile Include="Dialogues\WebradioDlgFavorites.cs" />
     <Compile Include="Models\WebradioFilter.cs" />
     <Compile Include="Models\WebradioHome.cs" />
-    <Compile Include="Models\WebradioSettings.cs" />
+    <Compile Include="Models\_WebradioSettings.cs" />
     <Compile Include="Player\WebRadioBassPlayer.cs" />
     <Compile Include="Player\WebRadioPlayerBuilder.cs" />
     <Compile Include="Player\WebRadioPlayerHelper.cs" />
@@ -94,8 +101,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\FavoritesSettings.cs" />
     <Compile Include="Settings\FilterSettings.cs" />
-    <Compile Include="Settings\Configuration\WebradioConfigFilters.cs" />
-    <Compile Include="Settings\Configuration\WebradioConfigFavorites.cs" />
+    <Compile Include="Settings\Configuration\WebradioConfig.cs" />
+    <Compile Include="Settings\WebradioSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\StreamList.xml">
@@ -137,17 +144,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Todo.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="C:\Users\dierk_000\Downloads\MediaPortal-2-WiP_Alpha3\MediaPortal\Source\UI\Players\BassPlayer\BassPlayer.csproj">
-      <Project>{1A980621-B711-4235-B98C-C4276D6FA9FD}</Project>
-      <Name>BassPlayer</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="C:\Users\dierk_000\Downloads\MediaPortal-2-WiP_Alpha3\MediaPortal\Source\UI\UiComponents\Media\Media.csproj">
-      <Project>{CD37E2FF-4CF7-4F96-8C73-C6764988D408}</Project>
-      <Name>Media</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="build.targets" />
@@ -200,6 +196,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Skin\Reflexion\screens\webradio_Home.xaml">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Skin\default\screens\webradio_dialogSettingsStreamlistUpdate.xaml">
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
