--- a/plugin.xml
+++ b/plugin.xml
@@ -21,7 +21,6 @@
 
   <Register Location="/Models">
     <Model Id="EA3CC191-0BE5-4C8D-889F-E9C4616AB554" ClassName="Webradio.Models.WebradioHome"/>
-    <!--<Model Id="6378BD83-BF06-4AC3-ADD7-9A4B72DA878E" ClassName="Webradio.Models.WebradioSettings"/>-->
     <Model Id="FF29E03E-F4A9-4E21-A299-349E79010430" ClassName="Webradio.Models.WebradioFilter"/>
     
     <Model Id="EC2F9DD4-C694-4C2D-9EFB-092AA1F4BD94" ClassName="Webradio.Dialogues.WebradioDlgFavorites"/>    
@@ -31,6 +30,7 @@
     <Model Id="7AE86A07-DB55-4AA6-9FBF-B1888A4FF6DA" ClassName="Webradio.Dialogues.WebradioDlgSearchInStreams"/>
     <Model Id="10D0E2AB-AE84-406F-8AA9-5A3FB2A86360" ClassName="Webradio.Dialogues.WebradioDlgImportFilter"/>
     <Model Id="028ABECD-9885-48F6-B39F-F252EC0115EF" ClassName="Webradio.Dialogues.WebradioDlgLoadUpdate"/>
+    <Model Id="A391ACBF-BEFE-4820-B17D-D06545CF9987" ClassName="Webradio.Dialogues.WebradioDlgSettingsStreamlistUpdate"/>
   </Register>
 
   <Register Location="/Players/Builders">
@@ -42,11 +42,6 @@
       Name="WebradioHome" MainScreen="webradio_Home"
       DisplayLabel="[Webradio.Home.ScreenTitle]"
       WorkflowModel="EA3CC191-0BE5-4C8D-889F-E9C4616AB554"/>
-    
-    <!--<WorkflowState Id="5F49F6FC-32C4-48F6-85C8-2EF05598310A"
-      Name="WebradioSettings" MainScreen="webradio_Settings"
-      DisplayLabel="[Webradio.Settings.ScreenTitle]"
-      WorkflowModel="6378BD83-BF06-4AC3-ADD7-9A4B72DA878E"/>-->
     
     <WorkflowState Id="F35CFCFE-7E2F-4F1C-BF99-AFAC0181134E"
       Name="WebradioFilter" MainScreen="webradio_Filter"
@@ -94,6 +89,12 @@
       DialogScreen="webradio_dialogLoadUpdate"
       DisplayLabel="[Webradio.Dialog.LoadUpdate.Header]"
       WorkflowModel="028ABECD-9885-48F6-B39F-F252EC0115EF"/>
+
+    <DialogState Id="F5549E99-5346-4F6F-99CD-3103CF4EEF09"
+      Name="SettingsStreamlistUpdate"
+      DialogScreen="webradio_dialogSettingsStreamlistUpdate"
+      DisplayLabel="[Webradio.Dialog.DeleteFilter.Her]"
+      WorkflowModel="A391ACBF-BEFE-4820-B17D-D06545CF9987"/>
   </Register>
 
   <Register Location="/Resources/Skin">
@@ -126,6 +127,12 @@
       HelpText="[Webradio.Favorites.Helptext]"
       ClassName="Webradio.Settings.Configuration.WebradioConfigFavorites"
       AdditionalData="WorkflowState=3E56BA52-F982-40C3-ACD9-E88425DC7C43,ConfAppPanel=..."/>
+    <CustomConfigSetting
+      Id="Webradio_Updates"
+      Text="[Webradio.Settings.Streamlistupdate]"
+      HelpText="[Webradio.Favorites.Helpt]"
+      ClassName="Webradio.Settings.Configuration.WebradioConfigStreamlistUpdates"
+      AdditionalData="WorkflowState=F5549E99-5346-4F6F-99CD-3103CF4EEF09,ConfAppPanel=..."/>
   </Register>
 
 </Plugin>
