--- a/Webradio.csproj
+++ b/Webradio.csproj
@@ -52,30 +52,44 @@
     <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bass.Net">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Team MediaPortal\MP2-Client\Plugins\BassLibraries\Bass.Net.dll</HintPath>
+    <Reference Include="Bass.Net, Version=2.4.10.3, Culture=neutral, PublicKeyToken=b7566c273e6ef480, processorArchitecture=MSIL">
+      <HintPath>C:\Users\Knecht\Source\Repos\MediaPortal-2\MediaPortal\Packages\BASS.NET.2.4.10.3\lib\net40\Bass.Net.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="BassPlayer">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Team MediaPortal\MP2-Client\Plugins\BassPlayer\BassPlayer.dll</HintPath>
-    </Reference>
-    <Reference Include="Media">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Team MediaPortal\MP2-Client\Plugins\Media\Media.dll</HintPath>
-    </Reference>
-    <Reference Include="MediaPortal.Common, Version=2.0.0.1309, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="CoverArtArchive, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\Team MediaPortal\MP2-Client\MediaPortal.Common.dll</HintPath>
+      <HintPath>C:\Users\Knecht\Source\Repos\Webradio_MP2\libs\CoverArtArchive.dll</HintPath>
+    </Reference>
+    <Reference Include="FanartTv, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\Knecht\Source\Repos\Webradio_MP2\libs\FanartTv.dll</HintPath>
+    </Reference>
+    <Reference Include="MediaPortal.Common">
+      <HintPath>C:\Users\Knecht\Source\Repos\MediaPortal-2\MediaPortal\Source\Core\MediaPortal.Common\bin\x86\Debug\MediaPortal.Common.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="MediaPortal.UI, Version=2.0.0.1309, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\Team MediaPortal\MP2-Client\MediaPortal.UI.dll</HintPath>
+    <Reference Include="MediaPortal.UI">
+      <HintPath>C:\Users\Knecht\Source\Repos\MediaPortal-2\MediaPortal\Source\Core\MediaPortal.UI\bin\x86\Debug\MediaPortal.UI.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="MusicBrainz, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\Knecht\Source\Repos\Webradio_MP2\libs\MusicBrainz.dll</HintPath>
+    </Reference>
+    <Reference Include="ParkSquare.Gracenote, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\Knecht\Source\Repos\Webradio_MP2\libs\ParkSquare.Gracenote.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
+    <Reference Include="TheAudioDB, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\TheAudioDB.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -93,9 +107,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Dialogues\WebradioDlgFavorites.cs" />
+    <Compile Include="Helper\TrackInfo.cs" />
     <Compile Include="Models\WebradioFilter.cs" />
     <Compile Include="Models\WebradioHome.cs" />
-    <Compile Include="Models\_WebradioSettings.cs" />
     <Compile Include="Player\WebRadioBassPlayer.cs" />
     <Compile Include="Player\WebRadioPlayerBuilder.cs" />
     <Compile Include="Player\WebRadioPlayerHelper.cs" />
@@ -109,11 +123,17 @@
   <ItemGroup>
     <Content Include="Data\StreamList.xml">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Language\strings_en.xml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="libs\CoverArtArchive.dll" />
+    <Content Include="libs\FanartTv.dll" />
+    <Content Include="libs\MusicBrainz.dll" />
+    <Content Include="libs\ParkSquare.Gracenote.dll" />
+    <Content Include="libs\TheAudioDB.dll" />
     <Content Include="plugin.xml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -144,10 +164,14 @@
     <Content Include="Skin\default\themes\default\styles\WebradioStyles.xaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Todo.txt" />
+    <Content Include="Skin\Titanium\screens\webradio_FullscreenContent.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include="build.targets" />
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Skin\default\screens\webradio_dialogSearchInStreams.xaml">
@@ -167,11 +191,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Skin\default\screens\webradio_CurrentlyPlaying.xaml">
-      <SubType>Designer</SubType>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Skin\Titanium\screens\webradio_FullScreenContent.xaml">
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
@@ -210,8 +229,41 @@
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="C:\Users\Knecht\Source\Repos\MediaPortal-2\MediaPortal\Source\Core\MediaPortal.Utilities\MediaPortal.Utilities.csproj">
+      <Project>{4FE7B8AE-1330-424A-91A1-C68D7ABF9CB8}</Project>
+      <Name>MediaPortal.Utilities</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="C:\Users\Knecht\Source\Repos\MediaPortal-2\MediaPortal\Source\Extensions\BassLibraries\BassLibraries.csproj">
+      <Project>{b186c33c-7dc6-4f6b-911d-b8d3c6482c39}</Project>
+      <Name>BassLibraries</Name>
+    </ProjectReference>
+    <ProjectReference Include="C:\Users\Knecht\Source\Repos\MediaPortal-2\MediaPortal\Source\UI\FanArt\FanArtService.Client\FanArtService.Client.csproj">
+      <Project>{cda7272f-e218-42a0-a53a-2d44e4015ff7}</Project>
+      <Name>FanArtService.Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="C:\Users\Knecht\Source\Repos\MediaPortal-2\MediaPortal\Source\UI\Players\BassPlayer\BassPlayer.csproj">
+      <Project>{1a980621-b711-4235-b98c-c4276d6fa9fd}</Project>
+      <Name>BassPlayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="C:\Users\Knecht\Source\Repos\MediaPortal-2\MediaPortal\Source\UI\SkinEngine\SkinEngine.csproj">
+      <Project>{7E943389-3589-40C9-B481-2E223554CC49}</Project>
+      <Name>SkinEngine</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="C:\Users\Knecht\Source\Repos\MediaPortal-2\MediaPortal\Source\UI\UiComponents\Media\Media.csproj">
+      <Project>{cd37e2ff-4cf7-4f96-8c73-c6764988d408}</Project>
+      <Name>Media</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Skin\Titanium\screens\webradio_CurrentlyPlaying.xaml">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="build.targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\Language"
 robocopy "$(ProjectDir)Language" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\Language" /MIR
@@ -221,7 +273,11 @@ mkdir "C:\ProgramData\Team MediaPortal\MP2-Client\Webradio"
 robocopy "$(ProjectDir)Data" "C:\ProgramData\Team MediaPortal\MP2-Client\Webradio" /MIR 
 xcopy /Y "$(ProjectDir)plugin.xml" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\"
 xcopy /Y "$(TargetPath)" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\"
-</PostBuildEvent>
+xcopy /Y "$(TargetDir)MusicBrainz.dll" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\"
+xcopy /Y "$(TargetDir)ParkSquare.Gracenote.dll" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\"
+xcopy /Y "$(TargetDir)TheAudioDB.dll" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\"
+xcopy /Y "$(TargetDir)FanartTv.dll" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\"
+xcopy /Y "$(TargetDir)CoverArtArchive.dll" "$(SolutionDir)..\Bin\$(SolutionName)\$(OutDir)Plugins\$(ProjectName)\"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
