--- a/plugin.xml
+++ b/plugin.xml
@@ -4,19 +4,26 @@
   PluginId="{9CBA9944-C19B-4112-B082-70C745677A97}"
   Author="BigGranu"
   Copyright="GPL"
-  Description="Play Webradiostreams"
-  PluginVersion="1.0">
+  Description="Play Webradiostreams">
+  
+   <Version
+    PluginVersion="1.1"
+    ReleaseDate="2015-02-11 01:00:00 GMT+01:00"
+    CurrentAPI="1"/>
+ 
 
   <Runtime>
     <Assembly FileName="Webradio.dll"/>
   </Runtime>
-
-  <DependsOn>
-    <PluginReference PluginId="{5D239050-02B8-4f58-8301-7630A1C4CF85}"/> <!-- SkinBase -->
-    <PluginReference PluginId="{15FB35F7-8C85-4404-BC67-BFF28446158A}"/> <!-- Media -->
-    <PluginReference PluginId="{9886EB43-B3EB-4cf1-A979-8D4D8874C555}"/> <!-- BassPlayer -->
-    <PluginReference PluginId="{1AFF4467-64B0-4ca1-AF28-9AEDF3525BCE}"/> <!-- ConfigurationManager -->
-    <PluginReference PluginId="{B765A4B6-F455-4941-BDAE-2CE45208BFEB}"/> <!-- Configuration plugin -->
+ 
+	<DependsOn>
+    <CoreDependency Name="MediaPortal.Common" CompatibleAPI="1" />
+    <CoreDependency Name="MediaPortal.UI" CompatibleAPI="1" />
+    <PluginReference PluginId="{1AFF4467-64B0-4ca1-AF28-9AEDF3525BCE}" CompatibleAPI="1"/> <!-- ConfigurationManager -->
+    <PluginReference PluginId="{B765A4B6-F455-4941-BDAE-2CE45208BFEB}" CompatibleAPI="1"/> <!-- Configuration plugin -->
+    <PluginReference PluginId="{5D239050-02B8-4f58-8301-7630A1C4CF85}"  CompatibleAPI="1"/><!-- SkinBase -->
+    <PluginReference PluginId="{9886EB43-B3EB-4cf1-A979-8D4D8874C555}"  CompatibleAPI="1"/><!-- BassPlayer -->
+    <PluginReference PluginId="{15FB35F7-8C85-4404-BC67-BFF28446158A}"  CompatibleAPI="1"/><!-- Media -->
   </DependsOn>
 
   <Register Location="/Models">
@@ -93,7 +100,7 @@
     <DialogState Id="F5549E99-5346-4F6F-99CD-3103CF4EEF09"
       Name="SettingsStreamlistUpdate"
       DialogScreen="webradio_dialogSettingsStreamlistUpdate"
-      DisplayLabel="[Webradio.Dialog.DeleteFilter.Her]"
+      DisplayLabel="[Webradio.Settings.Streamlistupdate]"
       WorkflowModel="A391ACBF-BEFE-4820-B17D-D06545CF9987"/>
   </Register>
 
@@ -130,7 +137,7 @@
     <CustomConfigSetting
       Id="Webradio_Updates"
       Text="[Webradio.Settings.Streamlistupdate]"
-      HelpText="[Webradio.Favorites.Helpt]"
+      HelpText="[Webradio.Settings.Streamlistupdate]"
       ClassName="Webradio.Settings.Configuration.WebradioConfigStreamlistUpdates"
       AdditionalData="WorkflowState=F5549E99-5346-4F6F-99CD-3103CF4EEF09,ConfAppPanel=..."/>
   </Register>
